--- a/index.html
+++ b/index.html
@@ -24,10 +24,10 @@
       </header>      
     <main>
       <hr>
-      <section id="Home">
+      <section id="home">
         <div class="container">
           <h1>Denis Novik</h1>
-          <span> UX | UI designer 24 years old, Minsk</span>
+          <span> UX | UI designer <br> 24 years old, Minsk</span>
           <picture class="home__photo">
             <source
               media="(max-width :576px)"
@@ -37,7 +37,8 @@
           </picture>
         </div>
       </section>
-       <section id="About"></section>
+       <section id="about"></section>
+       <div class="about">
       <h2>About me</h2>
       <p>
         Hi, I'm Denis – UX/UI designer from Minsk. I'm interested in design and
@@ -45,6 +46,7 @@
         design interfaces" in IT-Academy. Ready to implement excellent projects
         with wonderful people.
       </p>
+    </div>
       <section id="Skills"></section>
       <h2>Skills</h2>
       <div>
