--- a/index.html
+++ b/index.html
@@ -37,17 +37,16 @@
           </picture>
         </div>
       </section>
-       <section id="about"></section>
-       <div class="about">
-      <h2>About me</h2>
+       <section id="about">
+             <h2 class="about_h2">About me</h2>
       <p>
-        Hi, I'm Denis – UX/UI designer from Minsk. I'm interested in design and
-        everything connected with it. I'm studying at courses "Web and mobile
-        design interfaces" in IT-Academy. Ready to implement excellent projects
+        Hi, I'm Denis – UX/UI designer from Minsk. <br> I'm interested in design and
+        everything connected with it. <br><br><br> I'm studying at courses "Web and mobile
+        design <br> interfaces" in IT-Academy. <br><br><br> Ready to implement excellent projects <br>
         with wonderful people.
       </p>
-    </div>
-      <section id="Skills"></section>
+    </section>
+          <section id="Skills"></section>
       <h2>Skills</h2>
       <div>
         <p>I work in such programs as</p>
