add styles for skills section

--- a/index.html
+++ b/index.html
@@ -5,29 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Denis Novik</title>
-    <link rel="stylesheet" href="./styles/reset.css">
-    <link rel="stylesheet" href="./styles/style.css">
-      </head>
+    <link rel="stylesheet" href="./styles/reset.css" />
+    <link rel="stylesheet" href="./styles/style.css" />
+  </head>
   <body>
     <header>
       <nav>
         <div class="container">
-        <ul class="menu">
-          <li class="menu_items"><a href="#Home">Home</a></li>
-          <li class="menu_items" ><a href="#About me">About me</a></li>
-          <li class="menu_items"><a href="#Skills">Skills</a></li>
-          <li class="menu_items" ><a href="#Portfolio">Portfolio</a></li>
-          <li class="menu_items"><a href="#Contacts">Contacts</a></li>
-        </ul>
-      </div>
+          <ul class="menu">
+            <li class="menu_items"><a href="#Home">Home</a></li>
+            <li class="menu_items"><a href="#About me">About me</a></li>
+            <li class="menu_items"><a href="#Skills">Skills</a></li>
+            <li class="menu_items"><a href="#Portfolio">Portfolio</a></li>
+            <li class="menu_items"><a href="#Contacts">Contacts</a></li>
+          </ul>
+        </div>
       </nav>
-      </header>      
+    </header>
     <main>
-      <hr>
+      <hr />
       <section id="home">
         <div class="container">
           <h1>Denis Novik</h1>
-          <span> UX | UI designer <br> 24 years old, Minsk</span>
+          <span>
+            UX | UI designer <br />
+            24 years old, Minsk</span
+          >
           <picture class="home__photo">
             <source
               media="(max-width :576px)"
@@ -37,60 +40,68 @@
           </picture>
         </div>
       </section>
-       <section id="about">
-             <h2 class="about_h2">About me</h2>
-      <p>
-        Hi, I'm Denis – UX/UI designer from Minsk. <br> I'm interested in design and
-        everything connected with it. <br><br><br> I'm studying at courses "Web and mobile
-        design <br> interfaces" in IT-Academy. <br><br><br> Ready to implement excellent projects <br>
-        with wonderful people.
-      </p>
-    </section>
-          <section id="Skills"></section>
-      <h2>Skills</h2>
-      <div>
-        <p>I work in such programs as</p>
-        <div>
-          <img src="./img/skills/iconPs.svg" alt="PS" />
-          <p>Adobe Photoshop</p>
-          <img src="./img/skills/star4.svg" alt="stars4" />
+      <section id="about">
+        <h2 class="about_h2">About me</h2>
+        <p class="about_p">
+          Hi, I'm Denis – UX/UI designer from Minsk. <br />
+          I'm interested in design and everything connected with it.
+          <br /><br /><br />
+          I'm studying at courses "Web and mobile design <br />
+          interfaces" in IT-Academy. <br /><br /><br />
+          Ready to implement excellent projects <br />
+          with wonderful people.
+        </p>
+      </section>
+      <section id="skills">
+        <h2 class="skills__title">Skills</h2>
+        <div class="container">
+          <p>I work in such programs as</p>
+          <div class="wrapper">
+            <div class="skills__card">
+              <img src="./img/skills/iconPs.svg" alt="PS" />
+              <p>Adobe Photoshop</p>
+              <img src="./img/skills/star4.svg" alt="stars4" />
+            </div>
+            <div class="skills__card">
+              <img src="./img/skills/iconAi.svg" alt="AI" />
+              <p>Adobe Illustrator</p>
+              <img src="./img/skills/star3.svg" alt="stars3" />
+            </div>
+            <div class="skills__card">
+              <img src="./img/skills/iconAe.svg" alt="AE" />
+              <p>
+                Adobe <br />
+                After Effects
+              </p>
+              <img src="./img/skills/star4.svg" alt="stars4" />
+            </div>
+            <div class="skills__card">
+              <img src="./img/skills/iconFigma.svg" alt="Figma" />
+              <p>Figma</p>
+              <img src="./img/skills/star4.svg" alt="stars4" />
+            </div>
+          </div>
         </div>
-        <div>
-          <img src="./img/skills/iconAi.svg" alt="AI" />
-          <p>Adobe Illustrator</p>
-          <img src="./img/skills/star3.svg" alt="stars3" />
-        </div>
-        <div>
-          <img src="./img/skills/iconAe.svg" alt="AE" />
-          <p>Adobe After Effects</p>
-          <img src="./img/skills/star4.svg" alt="stars4" />
-        </div>
-        <div>
-          <img src="./img/skills/iconFigma.svg" alt="Figma" />
-          <p>Figma</p>
-          <img src="./img/skills/star4.svg" alt="stars4" />
-        </div>
-      </div>
-      <section id="Portfolio"></section>
-      <h2>Portfolio</h2>
-      <div>
-      <picture class="PortfolioPhoto">
-        <img src="./img/portfolio/portfolio.jpg" alt="photo" />
-        <p>Online fashion store - Homepage</p>
-      </picture>
-      <picture class="reebok">
-        <img src="./img/portfolio/reebok.jpg" alt="photo" />
-        <p>Reebok Store - Concept</p>
-      </picture>
-      <picture class="braun">
-        <img src="./img/portfolio/braun.jpg" alt="photo" />
-        <p>Braun Landing Page - Concept</p>
-      </div>
-      </picture>
+      </section>
+      <section id="Portfolio">
+        <h2>Portfolio</h2>
+        <picture class="PortfolioPhoto">
+          <img src="./img/portfolio/portfolio.jpg" alt="photo" />
+          <p>Online fashion store - Homepage</p>
+        </picture>
+        <picture class="reebok">
+          <img src="./img/portfolio/reebok.jpg" alt="photo" />
+          <p>Reebok Store - Concept</p>
+        </picture>
+        <picture class="braun">
+          <img src="./img/portfolio/braun.jpg" alt="photo" />
+          <p>Braun Landing Page - Concept</p>
+        </picture>
+      </section>
       <section id="Contacts"></section>
       <h2>Contacts</h2>
       <p>Want to know more or just chat? You are welcome!</p>
-      <button type="button">Send message</button><br><br><br>
+      <button type="button">Send message</button><br /><br /><br />
     </main>
     <footer>
       <div>
@@ -100,7 +111,7 @@
         <img src="./img/footer/planet.svg" alt="planet" />
         <p>Like me on LinkedIn, Instagram, Behance, Dribble</p>
       </div>
-          </footer>
-          <br>
+    </footer>
+    <br />
   </body>
-</html> 
+</html>
