--- a/index.html
+++ b/index.html
@@ -84,20 +84,21 @@
         </div>
       </section>
       <section id="Portfolio">
-        <h2>Portfolio</h2>
-        <picture class="PortfolioPhoto">
-          <img src="./img/portfolio/portfolio.jpg" alt="photo" />
-          <p>Online fashion store - Homepage</p>
-        </picture>
-        <picture class="reebok">
-          <img src="./img/portfolio/reebok.jpg" alt="photo" />
-          <p>Reebok Store - Concept</p>
-        </picture>
-        <picture class="braun">
-          <img src="./img/portfolio/braun.jpg" alt="photo" />
-          <p>Braun Landing Page - Concept</p>
-        </picture>
-      </section>
+        <div class="flex_wrap">
+        <h2 class="portfolio__title">Portfolio</h2>
+        <div>
+          <img class="img" src="./img/portfolio/portfolio.jpg" alt="photo" width="940" height="512"/>
+        </div>
+        <a class="a__1" href="https://snowqueen.ru/sankt-peterburg/catalog/zhenskaya-odezhda/dublenki" target="_blank">Online fashion store - Homepage</a>
+        <div>
+          <img class="img" src="./img/portfolio/reebok.jpg" alt="photo" width="940" height="524"/>
+        </div>
+        <a class="a__1" href="https://www.reebok.ru/muzhchiny" target="_blank">Reebok Store - Concept</a>
+        <div>
+          <img class="img" src="./img/portfolio/braun.jpg" alt="photo" width="940" height="524"/>
+        </div>
+        <a class="a__2" href="https://braun-germany.de/en/11-cams" target="_blank">Braun Landing Page - Concept</a>
+      </div>
       <section id="Contacts"></section>
       <h2>Contacts</h2>
       <p>Want to know more or just chat? You are welcome!</p>
