--- a/index.html
+++ b/index.html
@@ -85,34 +85,75 @@
       </section>
       <section id="Portfolio">
         <div class="flex_wrap">
-        <h2 class="portfolio__title">Portfolio</h2>
-        <div>
-          <img class="img" src="./img/portfolio/portfolio.jpg" alt="photo" width="940" height="512"/>
+          <h2 class="portfolio__title">Portfolio</h2>
+          <div>
+            <img
+              class="img"
+              src="./img/portfolio/portfolio.jpg"
+              alt="photo"
+              width="940"
+              height="512"
+            />
+          </div>
+          <a
+            class="a__1"
+            href="https://snowqueen.ru/sankt-peterburg/catalog/zhenskaya-odezhda/dublenki"
+            target="_blank"
+            >Online fashion store - Homepage</a
+          >
+          <div>
+            <img
+              class="img"
+              src="./img/portfolio/reebok.jpg"
+              alt="photo"
+              width="940"
+              height="524"
+            />
+          </div>
+          <a class="a__1" href="https://www.reebok.ru/muzhchiny" target="_blank"
+            >Reebok Store - Concept</a
+          >
+          <div>
+            <img
+              class="img"
+              src="./img/portfolio/braun.jpg"
+              alt="photo"
+              width="940"
+              height="524"
+            />
+          </div>
+          <a
+            class="a__2"
+            href="https://braun-germany.de/en/11-cams"
+            target="_blank"
+            >Braun Landing Page - Concept</a
+          >
         </div>
-        <a class="a__1" href="https://snowqueen.ru/sankt-peterburg/catalog/zhenskaya-odezhda/dublenki" target="_blank">Online fashion store - Homepage</a>
-        <div>
-          <img class="img" src="./img/portfolio/reebok.jpg" alt="photo" width="940" height="524"/>
+      </section>
+      <section id="contacts">
+        <div class="flex__contacs">
+          <h2 class="contacts__title">Contacts</h2>
+          <p class="contacts__p">
+            Want to know more or just chat? <br />
+            You are welcome!
+          </p>
+          <button class="cotacts__button" type="button">Send message</button>
         </div>
-        <a class="a__1" href="https://www.reebok.ru/muzhchiny" target="_blank">Reebok Store - Concept</a>
-        <div>
-          <img class="img" src="./img/portfolio/braun.jpg" alt="photo" width="940" height="524"/>
+        <div class="flex_small_icons">
+          <img src="./img/footer/in.svg" alt="in" />
+          <img src="./img/footer/insta.svg" alt="inst" />
+          <img src="./img/footer/be.svg" alt="be" />
+          <img src="./img/footer/planet.svg" alt="planet" />
         </div>
-        <a class="a__2" href="https://braun-germany.de/en/11-cams" target="_blank">Braun Landing Page - Concept</a>
-      </div>
-      <section id="Contacts"></section>
-      <h2>Contacts</h2>
-      <p>Want to know more or just chat? You are welcome!</p>
-      <button type="button">Send message</button><br /><br /><br />
+      </section>
     </main>
-    <footer>
+    <footer class="footer_class">
       <div>
-        <img src="./img/footer/in.svg" alt="in" />
-        <img src="./img/footer/insta.svg" alt="inst" />
-        <img src="./img/footer/be.svg" alt="be" />
-        <img src="./img/footer/planet.svg" alt="planet" />
-        <p>Like me on LinkedIn, Instagram, Behance, Dribble</p>
+        <p>
+          Like me on <br />
+          LinkedIn, Instagram, Behance, Dribble
+        </p>
       </div>
     </footer>
-    <br />
   </body>
 </html>
