--- a/index.html
+++ b/index.html
@@ -66,17 +66,17 @@
           <div class="wrapper">
             <div class="skills__card">
               <img src="./img/skills/iconPs.svg" alt="PS" />
-              <p>Adobe Photoshop</p>
+              <p class="skills__p">Adobe Photoshop</p>
               <img src="./img/skills/star4.svg" alt="stars4" />
             </div>
             <div class="skills__card">
               <img src="./img/skills/iconAi.svg" alt="AI" />
-              <p>Adobe Illustrator</p>
+              <p class="skills__p">Adobe Illustrator</p>
               <img src="./img/skills/star3.svg" alt="stars3" />
             </div>
             <div class="skills__card">
               <img src="./img/skills/iconAe.svg" alt="AE" />
-              <p>
+              <p class="skills__p">
                 Adobe <br />
                 After Effects
               </p>
@@ -84,7 +84,7 @@
             </div>
             <div class="skills__card">
               <img src="./img/skills/iconFigma.svg" alt="Figma" />
-              <p>Figma</p>
+              <p class="skills__p">Figma</p>
               <img src="./img/skills/star4.svg" alt="stars4" />
             </div>
           </div>
