fix 768px, 425px

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
               media="(max-width :576px)"
               srcset="./img/home/photoMobile.png"
             />
-            <img src="./img/home/photoDenis.jpg" alt="photo" />
+            <img class="img__home" src="./img/home/photoDenis.jpg" alt="photo" />
           </picture>
         </div>
       </section>
